bumped various plugin versions for jdk 25